[gd_scene load_steps=31 format=3 uid="uid://d2cj22y8bkni4"]

[ext_resource type="Script" uid="uid://dnjf0fgnvuhy1" path="res://Scripts/background.gd" id="1_ewpxn"]
[ext_resource type="Script" uid="uid://ddrasymxcaq5j" path="res://Scripts/game.gd" id="1_o3eg0"]
[ext_resource type="Texture2D" uid="uid://db7k27i0hs5la" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 5/1.png" id="2_f6fkt"]
[ext_resource type="Texture2D" uid="uid://cgduerxds5vtn" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 5/3.png" id="3_8ih6i"]
[ext_resource type="Texture2D" uid="uid://dkq55s16pnm1g" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 5/4.png" id="4_dwjn7"]
[ext_resource type="Texture2D" uid="uid://b1suerugb57vq" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 5/5.png" id="5_0vdv6"]
[ext_resource type="Script" uid="uid://cvmy646hiblp1" path="res://Scripts/bubble_spawner.gd" id="6_xta46"]
[ext_resource type="PackedScene" uid="uid://cili3i8us0yag" path="res://Scenes/bubbles/bubble_container_1.tscn" id="7_k5rfa"]
[ext_resource type="Texture2D" uid="uid://6j52u1i0ussi" path="res://HUD 2/BoxDogs.png" id="13_lx0ty"]
[ext_resource type="Texture2D" uid="uid://p2ycm3baflxn" path="res://HUD 2/JogarNovamente.png" id="14_4txr5"]
[ext_resource type="Script" uid="uid://d3j0rsmox5yrs" path="res://Scripts/icons_container.gd" id="14_u7mvg"]
[ext_resource type="Texture2D" uid="uid://cyq6ityjcsvpf" path="res://HUD 2/Menu Principal.png" id="15_1y8g8"]
[ext_resource type="PackedScene" uid="uid://b0hwdr1gjhyvr" path="res://Scenes/icons/icon_1.tscn" id="15_665my"]
[ext_resource type="PackedScene" uid="uid://rtcmdufu80u6" path="res://Scenes/icons/icon_2.tscn" id="16_jgue8"]
[ext_resource type="PackedScene" uid="uid://bnx62jvox7x" path="res://Scenes/icons/icon_3.tscn" id="17_bjif3"]
[ext_resource type="Script" uid="uid://ckcxpas62kb8q" path="res://Scripts/mechanics/mouse_wave.gd" id="17_lbihj"]
[ext_resource type="PackedScene" uid="uid://do4wr34k80yr1" path="res://Scenes/icons/icon_gold.tscn" id="18_raj38"]
[ext_resource type="PackedScene" uid="uid://cmld782ijgd4y" path="res://Scenes/icons/icon_4.tscn" id="18_tc81j"]
[ext_resource type="PackedScene" uid="uid://dpyy4hyl0syt1" path="res://Scenes/icons/icon_5.tscn" id="19_8bqg7"]
[ext_resource type="AudioStream" uid="uid://dci3r6ht0wk2n" path="res://Audio/cats game/322533__fran89__bongo.wav" id="19_lbihj"]
[ext_resource type="Script" uid="uid://i48va3nvsjfq" path="res://Scripts/adaptive_difficulty.gd" id="20_raj38"]
[ext_resource type="Texture2D" uid="uid://bjetlqh6i8x7r" path="res://icon.svg" id="21_rajel"]
[ext_resource type="PackedScene" uid="uid://bgwmxpcndenmw" path="res://Scenes/mechanics/basket.tscn" id="22_vvhu1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vvhu1"]
radius = 219.2282

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3cqs"]
size = Vector2(3718, 176)

[sub_resource type="LabelSettings" id="LabelSettings_s2lrp"]
font_size = 70

[sub_resource type="Gradient" id="Gradient_51l33"]
offsets = PackedFloat32Array(0.130435, 0.278261, 0.408696, 0.556522)
colors = PackedColorArray(1, 1, 1, 1, 0.5274, 0.359042, 0.12334, 1, 0.689677, 0.469516, 0.16129, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1cmpp"]
gradient = SubResource("Gradient_51l33")
width = 300
height = 300
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_raj38"]
font_size = 36
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rajel"]
size = Vector2(128.32904, 129.09448)

[node name="Game" type="Node2D"]
script = ExtResource("1_o3eg0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(683, 384)

[node name="Backgrounds" type="Node2D" parent="."]
z_index = -100
position = Vector2(-902, -545)
scale = Vector2(2.4, 2.4)
script = ExtResource("1_ewpxn")

[node name="1" type="Sprite2D" parent="Backgrounds"]
z_index = -1000
position = Vector2(660, 386)
texture = ExtResource("2_f6fkt")

[node name="3" type="Sprite2D" parent="Backgrounds"]
z_index = -1000
position = Vector2(638, 339)
texture = ExtResource("3_8ih6i")

[node name="4" type="Sprite2D" parent="Backgrounds"]
z_index = -1000
position = Vector2(662, 387)
texture = ExtResource("4_dwjn7")

[node name="5" type="Sprite2D" parent="Backgrounds"]
z_index = -1000
position = Vector2(661, 387)
texture = ExtResource("5_0vdv6")

[node name="BubbleSpawner" type="Node2D" parent="." node_paths=PackedStringArray("spawn_points")]
unique_name_in_owner = true
script = ExtResource("6_xta46")
bubble_objects = Array[PackedScene]([ExtResource("7_k5rfa")])
spawn_points = [NodePath("Marker2D2"), NodePath("Marker2D4"), NodePath("Marker2D6"), NodePath("Marker2D8"), NodePath("Marker2D10"), NodePath("Marker2D12"), NodePath("Marker2D14"), NodePath("Marker2D16"), NodePath("Marker2D18")]

[node name="Marker2D2" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(44, 819)

[node name="Marker2D4" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(204.8, 819)

[node name="Marker2D6" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(365.6, 819)

[node name="Marker2D8" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(526.4, 819)

[node name="Marker2D10" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(687.2, 819)

[node name="Marker2D12" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(848, 819)

[node name="Marker2D14" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(1008.8, 819)

[node name="Marker2D16" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(1169.6, 819)

[node name="Marker2D18" type="Marker2D" parent="BubbleSpawner"]
position = Vector2(1330.4, 819)

[node name="IconsContainer" type="Node2D" parent="."]
script = ExtResource("14_u7mvg")
icon_scenes = Array[PackedScene]([ExtResource("15_665my"), ExtResource("16_jgue8"), ExtResource("17_bjif3"), ExtResource("18_tc81j"), ExtResource("19_8bqg7")])
icon_gold = ExtResource("18_raj38")

[node name="AdaptiveDifficulty" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("20_raj38")

[node name="MouseWave" type="Node2D" parent="."]
script = ExtResource("17_lbihj")

[node name="wave_area" type="Area2D" parent="MouseWave"]
unique_name_in_owner = true
position = Vector2(311, 398)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseWave/wave_area"]
shape = SubResource("CircleShape2D_vvhu1")

[node name="Sprite2D" type="Sprite2D" parent="MouseWave/wave_area"]
visible = false
modulate = Color(1, 1, 1, 0.2901961)
scale = Vector2(1.6875, 1.6875)
texture = ExtResource("21_rajel")

[node name="BumpAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("19_lbihj")
volume_db = 4.903

[node name="KillDogsArea" type="Area2D" parent="." groups=["death"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillDogsArea"]
position = Vector2(695, 1047)
shape = SubResource("RectangleShape2D_f3cqs")

[node name="CreateIconArea" type="Area2D" parent="." groups=["icon"]]
position = Vector2(19, -121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CreateIconArea"]
position = Vector2(695, 1047)
shape = SubResource("RectangleShape2D_f3cqs")

[node name="GameOverArea" type="Area2D" parent="." groups=["game_over"]]
position = Vector2(0, -1239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
position = Vector2(695, 1047)
shape = SubResource("RectangleShape2D_f3cqs")

[node name="game_over_ui" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoxDogs" type="Sprite2D" parent="game_over_ui"]
position = Vector2(685, 377)
texture = ExtResource("13_lx0ty")

[node name="actual_score" type="Label" parent="game_over_ui"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 201.0
offset_top = 170.0
offset_right = 1153.0
offset_bottom = 437.0
text = "1500"
label_settings = SubResource("LabelSettings_s2lrp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_mode" type="Label" parent="game_over_ui"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 201.0
offset_top = 244.0
offset_right = 1153.0
offset_bottom = 511.0
text = "game_mode"
label_settings = SubResource("LabelSettings_s2lrp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="JogarNovamente" type="Sprite2D" parent="game_over_ui"]
position = Vector2(461, 537)
texture = ExtResource("14_4txr5")

[node name="MenuPrincipal" type="Sprite2D" parent="game_over_ui"]
position = Vector2(925, 534)
texture = ExtResource("15_1y8g8")

[node name="play_again" type="Button" parent="game_over_ui"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 268.0
offset_top = 461.0
offset_right = 658.0
offset_bottom = 608.0
text = "Jogar Novamente"

[node name="main_menu" type="Button" parent="game_over_ui"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 725.0
offset_top = 454.0
offset_right = 1120.0
offset_bottom = 608.0
text = "Menu Principal"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(971, 270)
scale = Vector2(1.4, 1.4)
color = Color(0.760784, 0.392157, 0.145098, 0.392157)
energy = 0.3
texture = SubResource("GradientTexture2D_1cmpp")

[node name="adaptive difficulty label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Adaptive Difficulty = 10"
label_settings = SubResource("LabelSettings_raj38")

[node name="cooldown spawn label" type="Label" parent="."]
visible = false
offset_top = 42.0
offset_right = 400.0
offset_bottom = 92.0
text = "Adaptive Difficulty = 10"
label_settings = SubResource("LabelSettings_raj38")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2(334.00003, 458)
rotation = 0.71191084
scale = Vector2(3.2109375, 1)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("21_rajel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.15020752, -0.15777588)
shape = SubResource("RectangleShape2D_rajel")
disabled = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false
position = Vector2(933.00006, 468.00003)
rotation = -0.77529854
scale = Vector2(3.2109375, 1)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
texture = ExtResource("21_rajel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-0.15020752, -0.15777588)
shape = SubResource("RectangleShape2D_rajel")
disabled = true

[node name="Basket6" parent="." instance=ExtResource("22_vvhu1")]
position = Vector2(931, 281)
multiplier = 10

[node name="Basket7" parent="." instance=ExtResource("22_vvhu1")]
position = Vector2(481, 542)

[connection signal="area_entered" from="GameOverArea" to="." method="_on_game_over_area_area_entered"]
[connection signal="button_down" from="game_over_ui/play_again" to="." method="_on_play_again_button_down"]
[connection signal="button_down" from="game_over_ui/main_menu" to="." method="_on_main_menu_button_down"]
